2012-05-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/misc.h (memcmp) [__APPLE__]: Mark as regparm 0.
	(memmove) [__APPLE__]: Likewise.
	(memcpy) [__APPLE__]: Likewise.
	(memset) [__APPLE__]: Likewise.
	* grub-core/kern/misc.c (memcmp) [__APPLE__]: Likewise.
	(memmove) [__APPLE__]: Likewise.
	(memcpy) [__APPLE__]: Likewise.
	(memset) [__APPLE__]: Likewise.


2012-05-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/genmod.sh.in: Fix a bug in Apple part which caused
	dependency discard.

2012-05-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/main.c (read_config_file): Provide config_file and
	config_directory.
	* util/grub.d/41_custom.in: Use config_directoy when available.

2012-05-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/bfs.c (iterate_in_b_tree): Add missing NESTED_FUNC_ATTR.
	(grub_bfs_dir): Likewise.

2012-05-27  Peter Jones <pjones@redhat.com>

	The old code gives arguments to a printf function which can't work
	correctly, and the compiler complains.

	* grub-core/tests/example_functional_test.c (example_test): Add
	missing text.
	* grub-core/tests/lib/test.c (add_failure): Rewrite.
	* include/grub/test.h (grub_test_assert_helper): New declaration.
	(grub_test_assert): Use grub_test_assert_helper.

2012-05-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.core.def (example_functional_test): Rename to ...
	(exfctest): ... this to avoid overlong filenames.
	All users updated.

2012-05-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Handle "." and ".." on squashfs.

	* grub-core/fs/squash4.c (grub_fshelp_node): New field stsize.
	Make inode numbers into stack.
	(grub_squash_read_symlink): Use stack.
	(grub_squash_iterate_dir): Use stack. Create "." and ".." nodes.
	(make_root_node): Fill stack.
	(grub_squash_open): Use stack.

2012-05-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (open_device): Set dest->dev to 0 after
	freeing.
